--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 
 .Rproj.user
 FSB_BI_Survey_2019_2021.rds
+FSB_job.csv
 git rm --cached FSB_BI_Survey_2019_2021.rds
 git rm --cached .Rproj.user
+git rm --cached FSB_job.csv
